testdata/baselines/reference/submodule/conformance/symbolProperty42.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
symbolProperty42.ts(2,5): error TS1168: A computed property name in a method overload must refer to an expression whose type is a literal type or a 'unique symbol' type.
symbolProperty42.ts(2,5): error TS2411: Property '[Symbol.iterator]' of type '(x: string) => string' is not assignable to 'number' index type '(x: number) => number'.
symbolProperty42.ts(2,6): error TS2304: Cannot find name 'Symbol'.
symbolProperty42.ts(3,12): error TS1168: A computed property name in a method overload must refer to an expression whose type is a literal type or a 'unique symbol' type.
symbolProperty42.ts(3,13): error TS2304: Cannot find name 'Symbol'.
symbolProperty42.ts(4,6): error TS2304: Cannot find name 'Symbol'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== symbolProperty42.ts (6 errors) ====
    class C {
        [Symbol.iterator](x: string): string;
        ~~~~~~~~~~~~~~~~~
!!! error TS1168: A computed property name in a method overload must refer to an expression whose type is a literal type or a 'unique symbol' type.
        ~~~~~~~~~~~~~~~~~
!!! error TS2411: Property '[Symbol.iterator]' of type '(x: string) => string' is not assignable to 'number' index type '(x: number) => number'.
         ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
        static [Symbol.iterator](x: number): number;
               ~~~~~~~~~~~~~~~~~
!!! error TS1168: A computed property name in a method overload must refer to an expression whose type is a literal type or a 'unique symbol' type.
                ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
        [Symbol.iterator](x: any) {
         ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
            return undefined;
        }
    }